// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test input clear 1`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal\\"><input id=\\"m-input-8\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\"><i input-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-close-circle m-input__clear-icon m-input--clear-icon-visible\\"></i></div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test input clear 2`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal\\"><input id=\\"m-input-8\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\"><i input-cover=\\"true\\" class=\\"m-icon m--box meve-icon--set meve-icon-close-circle m-input__clear-icon\\"></i></div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test input focus & blur 1`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal m-input--outline\\"><input id=\\"m-input-4\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\"></div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test input focus & blur 2`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal\\"><input id=\\"m-input-4\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\"></div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test input maxlength 1`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal\\"><input id=\\"m-input-6\\" autocomplete=\\"off\\" type=\\"text\\" maxlength=\\"6\\" class=\\"m-input__input\\">
    <div class=\\"m-input__maxlength\\">0 / 6</div>
  </div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test input maxlength 2`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal\\"><input id=\\"m-input-6\\" autocomplete=\\"off\\" type=\\"text\\" maxlength=\\"6\\" class=\\"m-input__input\\">
    <div class=\\"m-input__maxlength\\">5 / 6</div>
  </div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test input size 1`] = `
"<div>
  <div class=\\"m-form-item\\">
    <div class=\\"m-input m--box m-input--normal\\"><input id=\\"m-input-1\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\"></div>
    <transition-stub name=\\"m-form-details\\"></transition-stub>
  </div>
  <div class=\\"m-form-item\\">
    <div class=\\"m-input m--box m-input--small\\"><input id=\\"m-input-2\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\"></div>
    <transition-stub name=\\"m-form-details\\"></transition-stub>
  </div>
  <div class=\\"m-form-item\\">
    <div class=\\"m-input m--box m-input--mini\\"><input id=\\"m-input-3\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\"></div>
    <transition-stub name=\\"m-form-details\\"></transition-stub>
  </div>
</div>"
`;

exports[`test input slots 1`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal\\">
    <div>prepend icon</div><input id=\\"m-input-9\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\">
    <div>append icon</div>
  </div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test input validation 1`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal m-input--validation-error-border\\"><input id=\\"m-input-12\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\"></div>
  <div class=\\"m-form-details\\">长度必须大于6</div>
</div>"
`;

exports[`test input validation 2`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal\\"><input id=\\"m-input-12\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\"></div>
  <!---->
</div>"
`;

exports[`test input value binding 1`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal\\"><input id=\\"m-input-0\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\"></div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test input value binding 2`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal\\"><input id=\\"m-input-0\\" autocomplete=\\"off\\" type=\\"text\\" class=\\"m-input__input\\"></div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test textarea focus & blur 1`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal m-input--outline m-input--resizeable\\" style=\\"height: auto;\\"><textarea id=\\"m-input-5\\" autocomplete=\\"off\\" rows=\\"5\\" class=\\"m-input__textarea m-input--normal-textarea\\"></textarea></div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test textarea focus & blur 2`] = `
"<div class=\\"m-form-item\\">
  <div class=\\"m-input m--box m-input--normal m-input--resizeable\\" style=\\"height: auto;\\"><textarea id=\\"m-input-5\\" autocomplete=\\"off\\" rows=\\"5\\" class=\\"m-input__textarea m-input--normal-textarea\\"></textarea></div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;
